--- a/website/electronic.html
+++ b/website/electronic.html
@@ -5,17 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <!-- bootstrap-cdn -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <!-- font-awesome-cnd -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+       <!-- bootstrap-cdn -->
+       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   
+           <!-- font-awesome-cnd -->
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
         <!-- jquery-cdn -->
         <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
@@ -86,6 +81,8 @@
             width: 30%;
             color: white;
             padding: 5px;
+            /* border: 1px solid white; */
+
 
         }
 
@@ -107,6 +104,15 @@
         .acc4 {
             /* border: 1px solid white; */
             width: 100px;
+            height: 100%;
+            text-align: center;
+        }
+
+        .acc1:hover,
+        .acc2:hover,
+        .acc3:hover,
+        .acc4:hover {
+            border: 1px solid white;
         }
 
         .acco {
@@ -158,181 +164,137 @@
             margin-left: 8%;
         }
 
-        .main {
+        /* main */
+        .main{
             display: flex;
         }
-
-        .productBox {
+        .laptop{
             width: 100%;
             height: auto;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-evenly;
         }
-
-        #box {
+        #box{
             width: 18%;
-            height: 630px;
+            height: 540px;
             padding-left: 15px;
             background-color: #f7f7f7;
-            border-radius: 5px;
+            border-radius: 7px;
             margin-top: 20px;
+            padding-right: 5px;
         }
-
-        #box img {
-            height: 300px;
+        #box img{
+            height: 200px;
             width: 94%;
             margin-top: 10px;
             margin-bottom: 20px;
-
+            
         }
-
-        #box #info .modal {
-            font-size: 16px;
-            font-weight: 700;
+        #box #info .about{
+            line-height: 1.3em ;
+            font-size: 16px ;
             color: #0f1111;
             cursor: pointer;
             font-family: "Amazon Ember", Arial, sans-serif;
         }
-
-        #box #info .about {
-            line-height: 1.3em;
-            font-size: 16px;
-            color: #0f1111;
-            cursor: pointer;
-            font-family: "Amazon Ember", Arial, sans-serif;
-        }
-
-        #box #info .dis {
+        #box #info .dis{
             color: #cc1c39;
             font-weight: 100;
-            font-size: 20px;
+            font-size: 25px;
             line-height: 36px;
-            font-family: "Amazon Ember", Arial, sans-serif;
+            font-family: "Amazon Ember", Arial, sans-serif; 
         }
-
-        #box #info .price {
-            font-size: 28px;
+        #box #info .price{
+            font-size: 20px;
             color: #0f1111;
             font-family: "Amazon Ember", Arial, sans-serif;
         }
-
-        #box #info .deli {
+        #box #info .deli{
             color: #0f1111;
             font-size: 14px;
             line-height: 20px;
             font-family: "Amazon Ember", Arial, sans-serif;
         }
-
-        #box #info button {
+        #box #info button{
             height: 30px;
             width: 70%;
             border-radius: 30px;
             background-color: #F7CA00;
             border: none;
-            margin-top: 20px;
+            margin-top:  20px;
             margin-left: 25px;
 
         }
-
-        #box #info .modal:hover,
-        #box #info .about:hover {
+        #box #info .modal:hover, #box #info .about:hover{
             color: red;
         }
-
         /* footer */
 
-        footer {
-            height: 600px;
-            width: 100%;
-            background-color: #232F3E;
-            padding-top: 20px;
-            margin-top: 20px;
-        }
-
-        footer .n {
-            height: 60%;
-            width: 70%;
-            margin: auto;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-        }
-
-        footer .n .n1,
-        .n2,
-        .n3,
-        .n4 {
-            height: 90%;
-            width: 23%;
-        }
-
-        footer .n .n1 h5,
-        .n2 h5,
-        .n3 h5,
-        .n4 h5 {
-            font-weight: 700;
-            color: white;
-            font-size: 16px;
-            padding-left: 30px;
-        }
-
-        footer .n .n1 ul li,
-        .n2 ul li,
-        .n3 ul li,
-        .n4 ul li {
-            list-style: none;
-        }
-
-        footer .n .n1 ul li a,
-        .n2 ul li a,
-        .n3 ul li a,
-        .n4 ul li a {
-            text-decoration: none;
-            color: #ddd;
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 2;
-        }
-
-        footer .n .n1 ul li a:hover,
-        .n2 ul li a:hover,
-        .n3 ul li a:hover,
-        .n4 ul li a:hover {
-            text-decoration: underline;
-        }
-
-        footer .n5 {
-            height: 70px;
-            width: 30%;
-            margin: auto;
-        }
-
-        footer .n5 img {
-            height: 80%;
-        }
-
-        footer .n5 select {
-            background-color: #232F3E;
-            border: 1px solid #ddd;
-            color: #ddd;
-            height: 40px;
-            width: 100px;
-            margin-left: 10%;
-        }
-
-        footer .n5 button {
-            height: 40px;
-            width: 100px;
-            background-color: #232F3E;
-            color: #ddd;
-            border: 1px solid #ddd;
-            margin-left: 10px;
-        }
-
-        footer .n5 button img {
-            height: 15px;
-        }
+footer{
+    height: 600px;
+    width: 100%;
+    background-color: #232F3E;
+    padding-top: 20px;
+}
+footer .n{
+    height: 60%;
+    width: 70%;
+    margin: auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+footer .n .n1, .n2, .n3, .n4{
+    height: 90%;
+    width: 23%;
+}
+footer .n .n1 h5, .n2 h5, .n3 h5, .n4 h5{
+    font-weight: 700;
+    color: white;
+    font-size: 16px;
+    padding-left: 30px;
+}
+footer .n .n1 ul li, .n2 ul li, .n3 ul li, .n4 ul li{
+    list-style: none;
+}
+footer .n .n1 ul li a, .n2 ul li a, .n3 ul li a, .n4 ul li a{
+    text-decoration: none;
+    color: #ddd;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 2;
+}
+footer .n .n1 ul li a:hover, .n2 ul li a:hover, .n3 ul li a:hover, .n4 ul li a:hover{
+    text-decoration: underline;
+}
+footer .n5{
+    height: 70px;
+    width: 30%;
+    margin: auto;
+}
+footer .n5 img{
+    height: 80%;
+}
+footer .n5 select{
+    background-color:#232F3E;
+    border: 1px solid #ddd;
+    color: #ddd;
+    height: 40px;
+    width: 100px;
+    margin-left: 10%;
+}
+footer .n5 button{
+    height: 40px;
+    width: 100px;
+    background-color: #232F3E;
+    color: #ddd;
+    border: 1px solid #ddd;
+    margin-left: 10px;
+}
+footer .n5 button img{
+    height: 15px;
+}
     </style>
 </head>
 
@@ -454,8 +416,11 @@
             <img src="image/fast.jpg" alt="">
         </nav>
     </div>
+
+    <!-- main-section -->
+
     <div class="main">
-        <div class="productBox"></div>
+        <div class="laptop"></div>
     </div>
 
     <!-- footer -->
@@ -464,7 +429,7 @@
             <div class="n1">
                 <h5>Get to Know <br> Us</h5>
                 <ul>
-                    <li><a href="">About Us</a></li>
+                    <li><a href="">About Us</a></li>                   
                     <li><a href="">Careers</a></li>
                     <li><a href="">Press Releases</a></li>
                     <li><a href="">Amazon Science</a></li>
@@ -473,7 +438,7 @@
             <div class="n2">
                 <h5>Connect with <br> Us</h5>
                 <ul>
-                    <li><a href="">Facebook</a></li>
+                    <li><a href="">Facebook</a></li>                   
                     <li><a href="">Twitter</a></li>
                     <li><a href="">Instagram</a></li>
                 </ul>
@@ -481,7 +446,7 @@
             <div class="n3">
                 <h5>Make Money with Us</h5>
                 <ul>
-                    <li><a href="">Sell on Amazon</a></li>
+                    <li><a href="">Sell on Amazon</a></li>                   
                     <li><a href="">Sell under Amazon <br>Accelerator</a></li>
                     <li><a href="">Protect and Build Your Brand</a></li>
                     <li><a href="">Amazon Global Selling</a></li>
@@ -495,7 +460,7 @@
             <div class="n4">
                 <h5>Let Us Help You</h5>
                 <ul>
-                    <li><a href="">Your Account</a></li>
+                    <li><a href="">Your Account</a></li>                   
                     <li><a href="">Returns Centre</a></li>
                     <li><a href="">Recalls and Product Safety <br> Alerts</a></li>
                     <li><a href="">100% Purchase Protection</a></li>
@@ -517,15 +482,15 @@
                 <option value="">বাংলা - BN - অনুবাদ</option>
                 <option value="">मराठी - MR - भाषांतर</option>
             </select>
-            <button><img src="https://upload.wikimedia.org/wikipedia/en/4/41/Flag_of_India.svg" alt="Indian Flag">
-                India</button>
+            <button><img src="https://upload.wikimedia.org/wikipedia/en/4/41/Flag_of_India.svg" alt="Indian Flag"> India</button>
 
         </div>
-    </footer>
+      </footer>
 
 
-    <script src="product.js"></script>
-    <script src="script.js"></script>
 </body>
+
+<script src="electronic.js"></script>
+<script src="script.js"></script>
 
 </html>
