--- a/website/login.html
+++ b/website/login.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="form.css">
+     <!-- jquery-cdn -->
+     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
+    
 </head>
 <style>
     *{
@@ -100,7 +104,9 @@
 
     <script src="login.js"></script>
     <script src="singup.js"></script>
+    <script src="script.js"></script>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </html>
 
 
