--- a/website/signup.html
+++ b/website/signup.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sing Up</title>
+     <!-- jquery-cdn -->
+     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 <style>
     * {
@@ -123,6 +125,7 @@
 
     <script src="singup.js"></script>
     <script src="login.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
