--- a/website-2/index.html
+++ b/website-2/index.html
@@ -67,7 +67,7 @@
                     <i class="ri-mic-line absolute top-[20%] right-[20px]" style="color: #737373;"></i>
                 </div>
                 <div class="icon w-[30%] h-full flex">
-                  <a href="" class="w-[17%] ms-5 ps-[30px]">
+                  <a href="loging.html" class="w-[17%] ms-5 ps-[30px]">
                     <div class="h-full w-1/4 flex items-center justify-evenly flex-col">
                       <i class="fa-regular fa-user" style="color: #818080;"></i>
                       <span class="text-xs pt-1 font-[poppins] cursor-pointer">Account</span>
@@ -332,7 +332,7 @@
     <div class="h-[300px] w-full bg-[#dda2430d] text-center mb-5 pt-4">
       <h1 class="text-center text-2xl text-[#212121] pt-5 pb-4">LOGIN FOR THE BEST EXPERIENCE</h1>
       <button class="h-14 w-[8%] bg-[#dda243] p-1">LOGIN NOW</button><br><br>
-      <a href="" class="underline">Create An Account</a>
+      <a href="loging.html" class="underline">Create An Account</a>
     </div>
 
 
