--- a/website-2/women.html
+++ b/website-2/women.html
@@ -161,16 +161,19 @@
                 <i class="fa-solid fa-angle-down absolute right-2 top-5 text-[#BCBCBC]" id="toggle"></i>
                 <div class="hidden p-2 bg-white font-[poppins]" id="slidtoggle">
                     <div class="a h-[40px] flex mt-2">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Bimetal (10)
+                        <input type="checkbox" id="sm1" class="h-[20px] w-[20px] rounded mr-3">Metal
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">18 Karat Gold (28)
+                        <input type="checkbox" id="sm2" class="h-[20px] w-[20px] rounded mr-3">Leather 
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Plastic (110)
+                        <input type="checkbox" id="sm3" class="h-[20px] w-[20px] rounded mr-3">Stainless Steel
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Silicone (125)
+                        <input type="checkbox" id="sm4" class="h-[20px] w-[20px] rounded mr-3">Mesh 
+                    </div>
+                    <div class="a h-[40px] flex">
+                        <input type="checkbox" id="sm5" class="h-[20px] w-[20px] rounded mr-3">Silicone
                     </div>
                 </div>
             </div>
@@ -180,25 +183,25 @@
                 <i class="fa-solid fa-angle-down absolute right-2 top-5 text-[#BCBCBC]" id="toggle"></i>
                 <div class="hidden p-2 bg-white font-[poppins]" id="slidtoggle">
                     <div class="a h-[40px] flex mt-2">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Titan (817)
+                        <input type="checkbox" id="br1" class="h-[20px] w-[20px] rounded mr-3">Titan (817)
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Fastrack (628)
+                        <input type="checkbox" id="br2" class="h-[20px] w-[20px] rounded mr-3">Fastrack (628)
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Sonata (593)
+                        <input type="checkbox" id="br3" class="h-[20px] w-[20px] rounded mr-3">Sonata (593)
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Anne Klein (135)
+                        <input type="checkbox" id="br4" class="h-[20px] w-[20px] rounded mr-3">Anne Klein (135)
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Kenneth Cole (77)
+                        <input type="checkbox" id="br5" class="h-[20px] w-[20px] rounded mr-3">Kenneth Cole (77)
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Tommy Hilfiger (67)
+                        <input type="checkbox" id="br6" class="h-[20px] w-[20px] rounded mr-3">Tommy Hilfiger (67)
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Nebula (39)
+                        <input type="checkbox" id="br7" class="h-[20px] w-[20px] rounded mr-3">Nebula (39)
                     </div>
                 </div>
             </div>
@@ -208,31 +211,31 @@
                 <i class="fa-solid fa-angle-down absolute right-2 top-5 text-[#BCBCBC]" id="toggle"></i>
                 <div class="hidden p-2 bg-white font-[poppins]" id="slidtoggle">
                     <div class="a h-[40px] flex mt-2">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Black (338)
+                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Black
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">White (39)
+                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">White
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Blue (190)
+                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Blue
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Green (78)
+                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Green
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Grey (74)
+                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Grey
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Golden (258)
+                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Golden
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Silver (318)
+                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Silver
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Brown (153)
+                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Brown
                     </div>
                     <div class="a h-[40px] flex">
-                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Rose Gold (509)
+                        <input type="checkbox" id="fil1" class="h-[20px] w-[20px] rounded mr-3">Rose Gold
                     </div>
                 </div>
             </div>
@@ -366,7 +369,7 @@
             </div>
         </aside>
 
-       <div class="productBox h-auto grid grid-cols-4 gap-3 px-4"></div>
+       <div class=" h-auto grid grid-cols-4 gap-3 px-4" id="productBox"></div>
        
     </div>
 
