--- a/website-2/singalpage.html
+++ b/website-2/singalpage.html
@@ -32,6 +32,9 @@
  
      <!-- Link Swiper's CSS -->
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+         <!-- sweetalert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
  
 </head>
 <body class="p-0 m-0 box-border">
