--- a/website-2/loging.html
+++ b/website-2/loging.html
@@ -55,18 +55,18 @@
             <img src="image/logo.svg" alt="" class="mt-[150px] h-[50px]">
             <img src="image/i62.svg" alt="">
         </div>
-        <div class="h-full w-[50%] p-3">
+        <div class="h-full w-[50%] p-3 ps-5">
             <p class="text-xl font-medium font-[poppins]">Login</p>
             <p class="pt-3 pb-4">Please enter your registered mobile number <br> to login via OTP</p>
 
             <form action="" id="sub">
-            <input  id="in"  type="number" placeholder="MOBAIL NUMBER *" class="border h-[40px] w-[60%] ps-3 mt-4">
+            <input  id="in"  type="tel" placeholder="MOBAIL NUMBER *" class="border h-[40px] w-[90%] ps-3 mt-4">
             <h1  id="ans"> </h1>
-            <input type="submit" name="" id="s_bt" class="border h-[40px] w-[60%] mt-3 bg-[#ccc]">
+            <input type="submit" name="" id="s_bt" class="border h-[40px] w-[90%] mt-3 bg-[#ccc]">
         </form>
             <form action="" id="sub1">
 
-                <input type="number" name="" id="nn"  placeholder="Enter OTP..." class="border h-[40px] w-[60%] ps-3 mt-4">
+                <input type="number" name="" id="nn"  placeholder="Enter OTP..." class="border h-[40px] w-[90%] ps-3 mt-4">
                 <br>
                 <br>
                 <input type="submit" value="Enter" class="border h-[40px] w-[100px] mt-2 bg-[#ccc]">
@@ -75,9 +75,9 @@
             <h1 id="suc">   </h1>
 
 
-            <p class="text-center pt-5 text-[#0006]">This site is protected by reCAPTCHA and the Google <span class="underline text-black">Privacy Policy</span>  and  <span class="underline text-black">Terms of Service</span> apply.</p>
+            <p class="text-center pt-5 text-[#0006] text-xs">This site is protected by reCAPTCHA and the Google <span class="underline text-black">Privacy Policy</span>  and <br> <span class="underline text-black">Terms of Service</span> apply.</p>
 
-            <p class="text-center pt-3 text-[#0006]">By continuing, I agree with Titan’s <span class="underline text-black"> Terms Of Service </span>  and  <span class="underline text-black">Privacy Policy</span></p>
+            <p class="text-center pt-4 text-[#0006] text-xs">By continuing, I agree with Titan’s <span class="underline text-black"> Terms Of Service </span>  and  <span class="underline text-black">Privacy Policy</span></p>
         </div>
     </div>
 
