--- a/website-2/cart.html
+++ b/website-2/cart.html
@@ -83,7 +83,7 @@
                         
                          <p class="text-base pt-3 text-[#1d1d1d] font-medium"><span>Grand Total</span><span class="ms-[48%] text-base" id="total">....</span></p>
     
-                         <button class="border p-3 w-[100%] bg-[#dda243] text-[#000000de] font-[Poppins] text-sm mt-5">PROCEED TO CHECKOUT</button>
+                         <a href="payment.html"><button class="border p-3 w-[100%] bg-[#dda243] text-[#000000de] font-[Poppins] text-sm mt-5">PROCEED TO CHECKOUT</button></a>
                     </div>
                 </div>
             </div>
