--- a/website-2/men.html
+++ b/website-2/men.html
@@ -60,24 +60,24 @@
                     <i class="ri-mic-line absolute top-[20%] right-[20px]" style="color: #737373;"></i>
                 </div>
                 <div class="icon w-[30%] h-full flex">
-                  <a href="" class="w-[17%] ms-5 ps-[30px]">
+                  <a href="loging.html" class="w-[17%] ms-5 ps-[30px]">
                     <div class="h-full w-1/4 flex items-center justify-evenly flex-col">
                       <i class="fa-regular fa-user" style="color: #818080;"></i>
                       <span class="text-xs pt-1 font-[poppins] cursor-pointer">Account</span>
-                  </div>
+                    </div>
                   </a>
                     <a href=""  class="w-[17%] ms-3 ps-[30px]">
                       <div class="h-full w-1/4 flex items-center justify-evenly flex-col">
                         <i class="fa-regular fa-heart" style="color: #818080;"></i>
                         <span class="text-xs pt-1 font-[poppins] cursor-pointer">Wishlist</span>
-                    </div>
+                      </div>
                     </a>
-                    
                     <a href="cart.html"  class="w-[17%] ms-3 ps-[30px]">
-                      <div class="h-full w-1/4 flex items-center justify-between flex-col">
+                      <div class="h-full w-1/4 flex items-center justify-between flex-col relative">
+                        <p id="total" class="border rounded-full h-[15px] w-[15px] flex justify-center items-center absolute ms-4 bg-[red] text-[white] text-[10px]"></p>
                         <i class="ri-shopping-bag-line h-2/3" style="color: #818080;"></i>
                         <span class="text-xs pt-1 font-[poppins] cursor-pointer h-7">Cart</span>
-                    </div>
+                      </div>
                     </a>
                     <div class="h-full w-1/4 flex items-center justify-evenly flex-col">
                         <i class="ri-mail-settings-line h-2/5" style="color: #818080;"></i>
@@ -382,5 +382,6 @@
     
 
     <script src="js/men.js"></script>
+    <script src="js/totalitem.js"></script>
 </body>
 </html>
