--- a/website-2/women.html
+++ b/website-2/women.html
@@ -41,7 +41,7 @@
 
 <body class="p-0 m-0 box-border">
 
-       <header class="h-[28vh] w-full">
+    <header class="h-[28vh] w-full">
         <div class="headline h-[18%] w-full bg-[#1d1d1d] text-white px-[10%] pt-[5px]">
 
             <marquee direction="left" width="100%" scrollamount="12" id="myMarquee"
@@ -70,20 +70,20 @@
                     <div class="h-full w-1/4 flex items-center justify-evenly flex-col">
                       <i class="fa-regular fa-user" style="color: #818080;"></i>
                       <span class="text-xs pt-1 font-[poppins] cursor-pointer">Account</span>
-                  </div>
+                    </div>
                   </a>
                     <a href=""  class="w-[17%] ms-3 ps-[30px]">
                       <div class="h-full w-1/4 flex items-center justify-evenly flex-col">
                         <i class="fa-regular fa-heart" style="color: #818080;"></i>
                         <span class="text-xs pt-1 font-[poppins] cursor-pointer">Wishlist</span>
-                    </div>
+                      </div>
                     </a>
-                    
                     <a href="cart.html"  class="w-[17%] ms-3 ps-[30px]">
-                      <div class="h-full w-1/4 flex items-center justify-between flex-col">
+                      <div class="h-full w-1/4 flex items-center justify-between flex-col relative">
+                        <p id="total" class="border rounded-full h-[15px] w-[15px] flex justify-center items-center absolute ms-4 bg-[red] text-[white] text-[10px]"></p>
                         <i class="ri-shopping-bag-line h-2/3" style="color: #818080;"></i>
                         <span class="text-xs pt-1 font-[poppins] cursor-pointer h-7">Cart</span>
-                    </div>
+                      </div>
                     </a>
                     <div class="h-full w-1/4 flex items-center justify-evenly flex-col">
                         <i class="ri-mail-settings-line h-2/5" style="color: #818080;"></i>
@@ -383,6 +383,7 @@
     <iframe src="footer.html" style="border:none; width: 100%; height: 420px; margin-top: 80px;"></iframe>
 
     <script src="js/women.js"></script>
+    <script src="js/totalitem.js"></script>
 </body>
 
 </html>
